408491: [Profile] Papyrus shall enable to easily switch between local and registered profiles. https://bugs.eclipse.org/bugs/show_bug.cgi?id=408491
Improvements to the Switch Profiles UI:
 - Add option to create problem markers
 - Move the action into the Model Explorer
 - Stream-line the dialog for usability